fixed anchor alignment with navbar

--- a/_sass/_09_elements.scss
+++ b/_sass/_09_elements.scss
@@ -158,3 +158,15 @@ img.lazy {
    box-shadow: 0 0px 10px #ae8c6e85;
 }
 
+/* https://github.com/Phlow/feeling-responsive/commit/e2d7a505b3206f0197ed092baec95708b10e4a3d */
+*:target:not([id^='fn:']):not([id^='fnref:']) {
+  &::before {
+    content: " ";
+    width: 0;
+    height: 0;
+
+    display: block;
+    padding-top: 50px;
+    margin-top: -50px;
+  }
+}
